--- a/_data/schedule_dec2.yml
+++ b/_data/schedule_dec2.yml
@@ -42,6 +42,6 @@
 - name: "Poster session"
   time_start: "15:45"
   time_end: "17:00"
-- name: "Social"
+- name: "Social and dinner"
   time_start: "17:00"
   time_end: "18:30"
