--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@
       link: /submission.html
     - name: Accepted Abstracts
       link: /accepted-abstracts.html
-    - name: Posters Gallery
+    - name: Submissions Gallery
       link: /gallery.html
 - name: Presenter Instructions
   link: /presenter-instructions.html
