--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -143,9 +143,11 @@
   title: "AI in Armed Conflict: What Could Possibly Go Wrong?"
   abstract: "TBD"
   time: 
-    - "09:45"
+    - "14:00"
     - "14:15"
-  session: "dec3"
+  session: 
+    - "dec2"
+    - "dec3"
   tags:
     - name: Website
       link: https://blogs.icrc.org/law-and-policy/contributor/jonathan-horowitz/
@@ -275,7 +277,7 @@
   alttext: Lieutenant Colonel Paul Lushenko
   title: "Artificial Intelligence, Trust, and Military Decision-Making: Evidence from Survey Experiments in the US Military"
   abstract: "What shapes military attitudes of trust in artificial intelligence (AI)? When used in concert with humans, AI is thought to help militaries maintain lethal overmatch of adversaries on the battlefield as well as optimize leaders' decision-making in the war-room. Despite these sanguine predictions, it is unclear what shapes soldiers' trust in AI, thus encouraging them to overcome skepticism of machines. To inform soldiers' understanding of AI, I explore three important but under-studied research questions. First, will soldiers trust AI used for different—tactical and strategic—purposes and with varying—human and machine—oversight? Second, what factors shape soldiers' trust in AI? Third, how are these trust outcomes complicated, if at all, by generational differences across the military ranks? To investigate these questions, I draw on novel middle-range theories that shape the use of survey experiments among rare and elite samples of the US military. The results suggest that soldiers' trust in AI is not guaranteed. Rather, trust is complex and multidimensional, shaped by underlying technical, operational, and regulatory considerations. These findings, which are consistent across the military ranks, provide the first experimental evidence for military attitudes of trust in AI, which have policy, strategy, and research implications."
-  time: "09:00"
+  time: "09:45"
   session: "dec3"
   tags:
   skip: False
