Add abstract Jonathan

--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -141,7 +141,7 @@
   photo: jonathan.png
   alttext: Jonathan Horowitz
   title: "AI in Armed Conflict: What Could Possibly Go Wrong?"
-  abstract: "TBD"
+  abstract: "Militaries are increasingly finding new and advanced ways to use artificial intelligence in support of their war fighting efforts. The scope of this support might seem endless, but each of the different applications requires an evaluation of the impact it may have on the battlefield for civilians, civilian objects, and others granted the protections of international humanitarian law (IHL), also known as the laws of war. This keynote will present some of the most common military uses of AI in armed conflict today, explore what risks they pose, and describe how the rules and principles of IHL regulate these uses, specifically with respect to cyber and information operations, autonomous weapons systems, and AI military decision support systems. The presentation will include a discuss on the risks that arise when AI systems operate at a speed beyond that of human control and understanding. At the same time, the presentation will also acknowledge that potential uses for AI exist that could help militaries satisfy their IHL obligations."
   time: 
     - "14:00"
     - "14:15"
