--- a/_data/schedule_dec2.yml
+++ b/_data/schedule_dec2.yml
@@ -36,12 +36,16 @@
 - name: "Contributed talk 3 (in-person)"
   time_start: "15:15"
   time_end: "15:30"
-- name: "Coffee break"
+- name: "Invited talk (in-person)"
   time_start: "15:30"
   time_end: "15:45"
-- name: "Poster session"
+  title: "Humanity & Inclusion Canada : Mission and Armed Violence Reduction (AVR) actions"
+- name: "Coffee break"
   time_start: "15:45"
-  time_end: "17:00"
+  time_end: "16:00"
+- name: "Poster session"
+  time_start: "16:00"
+  time_end: "17:15"
 - name: "Social and dinner"
-  time_start: "17:00"
-  time_end: "18:30"
+  time_start: "17:15"
+  time_end: "18:45"
