Add tentative keynote from Gisela

--- a/_data/schedule_dec3.yml
+++ b/_data/schedule_dec3.yml
@@ -1,4 +1,7 @@
 - name: Registration
+  time_start: "08:45"
+  time_end: "09:15"
+- name: Keynote talk (tentative)
   time_start: "09:15"
   time_end: "09:45"
 - name: "Keynote talk (in-person)"
