--- a/_data/schedule_dec3.yml
+++ b/_data/schedule_dec3.yml
@@ -1,7 +1,7 @@
 - name: Registration and breakfast
   time_start: "08:45"
   time_end: "09:15"
-- name: Keynote talk (tentative)
+- name: Keynote talk
   time_start: "09:15"
   time_end: "09:45"
 - name: "Keynote talk (in-person)"
