--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -116,6 +116,21 @@
       link: https://aplusalliance.org/member/wanda-munoz/
   skip: False
 
+- fullname: Gisela Luján Andrade
+  affiliations: 
+  - Perú por el Desarme
+  position: Founder
+  bio: "Gisela Luján Andrade is a political advocacy consultant with over 15 years of experience in humanitarian disarmament, human rights, and political communication. Her expertise encompasses analysis, advocacy, and research on social movements, AWS and their humanitarian and social impact on civilians. She is the founder of 'Perú por el Desarme', a civil association promoting awareness of the humanitarian risks of autonomous weapons systems and fostering a culture of peace. Gisela has contributed to international and regional processes related to landmines, cluster munitions, nuclear weapons and AWS. She has published on topics related to emerging military technologies, activism, feminist self-care, AWS regulation, and AI governance. Gisela serves as the representative in Peru of SEHLAC (Latin American and Caribbean Human Security Network) and is a member of the global coalition Stop Killer Robots. Gisela holds two master's degrees in political science from the Pontifical Catholic University of Peru and the Panthéon Sorbonne University and has pursued doctoral studies in sociology at the École des Hautes Études en Sciences Sociales (EHESS)."
+  photo: gisela.png
+  alttext: Gisela Luján Andrade
+  title: "Autonomous Weapons in Latin America: Proliferation Risks, Gendered Impacts, and the Path to Regulation"
+  abstract: "TBD"
+  time: "09:15"
+  session: "dec3"
+  tags:
+    - name: Website
+      link: https://www.linkedin.com/in/giselalujanandrade/
+  skip: False
 
 - fullname: Bernard Duhaime 
   affiliations: 
