--- a/_data/schedule_dec2.yml
+++ b/_data/schedule_dec2.yml
@@ -1,4 +1,4 @@
-- name: Registration and breakfast
+- name: Check-in and breakfast
   time_start: "08:30"
   time_end: "09:00"
 - name: Opening remarks
