--- a/_data/schedule_dec3.yml
+++ b/_data/schedule_dec3.yml
@@ -1,4 +1,4 @@
-- name: Registration and breakfast
+- name: Check-in and breakfast
   time_start: "08:45"
   time_end: "09:15"
 - name: Keynote talk
