--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -123,8 +123,8 @@
   bio: "Gisela Luján Andrade is a political advocacy consultant with over 15 years of experience in humanitarian disarmament, human rights, and political communication. Her expertise encompasses analysis, advocacy, and research on social movements, AWS and their humanitarian and social impact on civilians. She is the founder of 'Perú por el Desarme', a civil association promoting awareness of the humanitarian risks of autonomous weapons systems and fostering a culture of peace. Gisela has contributed to international and regional processes related to landmines, cluster munitions, nuclear weapons and AWS. She has published on topics related to emerging military technologies, activism, feminist self-care, AWS regulation, and AI governance. Gisela serves as the representative in Peru of SEHLAC (Latin American and Caribbean Human Security Network) and is a member of the global coalition Stop Killer Robots. Gisela holds two master's degrees in political science from the Pontifical Catholic University of Peru and the Panthéon Sorbonne University and has pursued doctoral studies in sociology at the École des Hautes Études en Sciences Sociales (EHESS)."
   photo: gisela.png
   alttext: Gisela Luján Andrade
-  title: "Autonomous Weapons in Latin America: Proliferation Risks, Gendered Impacts, and the Path to Regulation"
-  abstract: "TBD"
+  title: "Autonomous Weapons in Latin America: Organized Crime, Gendered Impacts and Activism for Regulation"
+  abstract: "The proliferation of Autonomous Weapons Systems in the hands of organized crime presents an urgent challenge for Latin America, with significant repercussions for security and social stability. This presentation will explore how these technologies could be exploited by criminal organizations in the region, exacerbating violence—particularly against women and marginalized communities—while reinforcing structural inequalities. It will also highlight the critical role of Latin American civil society in addressing these interconnected risks and advancing pathways toward meaningful regulation."
   time: "09:15"
   session: "dec3"
   tags:
